test/corpus/attached_modifiers.txt
================================================================================
att-00: Standalone markup
================================================================================
*word*
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    ))

================================================================================
att-01: valid cases before open
================================================================================
word *word*

word.*word*

*word*/word/
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (bold
      (bold_open)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (word)
    (punctuation)
    (bold
      (bold_open)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (italic
      (italic_open)
      (word)
      (italic_close))
    ))

================================================================================
att-02: valid cases after open
================================================================================
*.word*

*/word/*
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (punctuation)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (italic
        (italic_open)
        (word)
        (italic_close))
      (bold_close))
    ))

================================================================================
att-03: valid cases before close
================================================================================
*word.*
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (punctuation)
      (bold_close))
))

================================================================================
att-04: valid cases after close
================================================================================
*word* word

*word*.word

*word*
word
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (whitespace)
    (word)
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (punctuation)
    (word)
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (soft_break)
    (word)
))

================================================================================
att-05: invalid cases before open
================================================================================
word*word*

**word*
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (punctuation)
    (word)
    (punctuation)
    (soft_break))
  (paragraph
    (punctuation)
    (word)
    (punctuation)
))

================================================================================
att-06: invalid cases after open
================================================================================
)* word*

)*
word*
--------------------------------------------------------------------------------
(document
  ; punctuation at beginning of the line to ignore heading
  (paragraph
    (punctuation)
    (punctuation)
    (whitespace)
    (word)
    (punctuation)
    (soft_break))
  (paragraph
    (punctuation)
    (punctuation)
    (soft_break)
    (word)
    (punctuation)
))

================================================================================
att-07: invalid cases before close 1
================================================================================
*word *
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (word)
      (whitespace)
      (punctuation))
))

================================================================================
att-08: invalid cases before close 2
================================================================================
*word
*
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (word)
      (soft_break)
      (punctuation))
))

================================================================================
att-09: invalid case after close 1
================================================================================
*word*word
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (word)
      (punctuation)
      (word))
))

================================================================================
att-10: invalid case after close 2
================================================================================
*word**
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (word)
      (punctuation))
))

================================================================================
att-11: valid case
================================================================================
*word*word*

*word**word*
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (punctuation)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (punctuation)
      (word)
      (bold_close))
))

================================================================================
att-12: don't allow same markup nested
================================================================================
*word *word*

*word *word* word*
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (whitespace)
      (punctuation)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (whitespace)
      (punctuation)
      (word)
      (bold_close))
    (whitespace)
    (word)
    (punctuation)
))

================================================================================
att-13: haard test
================================================================================
word *word /word _word ~word/
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (whitespace)
    (unclosed_bold
      (bold_open)
      (word)
      (whitespace)
      (unclosed_italic
        (italic_open)
        (word)
        (whitespace)
        (unclosed_underline
          (underline_open)
          (word)
          (whitespace)
          (unclosed_strikethrough
            (strikethrough_open)
            (word)
            (punctuation)))))))

================================================================================
att-14: verbatim attached modifiers
================================================================================
`word`
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (word)
      (verbatim_close))))

================================================================================
att-15: single unclosed opener inside markup as punctuation
================================================================================
*/*
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (unclosed_italic
        (italic_open)
        (punctuation)))
))

================================================================================
att-15.1: valid markup after unclosed markup and invalid close modifier
================================================================================
*/*word/

*/**/
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (italic
        (italic_open)
        (punctuation)
        (word)
        (italic_close))
      (soft_break)))
  (paragraph
    (unclosed_bold
      (bold_open)
      (italic
        (italic_open)
        (punctuation)
        (italic_close)))
))

================================================================================
att-15.2: unclosed opening modifier before the valid close modifier
================================================================================
*word /*
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (word)
      (whitespace)
      (unclosed_italic
        (italic_open)
        (punctuation)))
))

================================================================================
att-16: prevent close modifier inside verbatim
================================================================================
`*word*`
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (punctuation)
      (word)
      (punctuation)
      (verbatim_close))
))

================================================================================
att-17: hard test verbatim & non-verbatim
================================================================================
`*$/_-!&word&!-_/*$`
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (word)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (verbatim_close))
))

================================================================================
att-18: LTR rule 1
================================================================================
*/word*/
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (italic
        (italic_open)
        (word)
        (punctuation)
        (italic_close)))
))

================================================================================
att-19: LTR rule 2
================================================================================
*`word*`
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (verbatim
        (verbatim_open)
        (word)
        (punctuation)
        (verbatim_close)))))

================================================================================
att-20: LTR rule 3
================================================================================
*/_~`word~_/*`
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (unclosed_italic
        (italic_open)
        (unclosed_underline
          (underline_open)
          (unclosed_strikethrough
            (strikethrough_open)
            (verbatim
              (verbatim_open)
              (word)
              (punctuation)
              (punctuation)
              (punctuation)
              (punctuation)
              (verbatim_close))))))))

================================================================================
att-21: LTR rule 4
================================================================================
`*word`*
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (punctuation)
      (word)
      (verbatim_close))
    (punctuation)
))

================================================================================
att-22: LTR rule 5
================================================================================
`*/_~word`~_/*
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (punctuation)
      (punctuation)
      (punctuation)
      (punctuation)
      (word)
      (verbatim_close))
    (unclosed_strikethrough
      (strikethrough_open)
      (unclosed_underline
        (underline_open)
        (unclosed_italic
          (italic_open)
          (punctuation))))
))

================================================================================
att-23: reset unclosed attached modifier after closing parent markup
================================================================================
*/word* /word/
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_bold
      (bold_open)
      (italic
        (italic_open)
        (word)
        (punctuation)
        (whitespace)
        (punctuation)
        (word)
        (italic_close)))
))

================================================================================
att-24: don't try pre-opened markup inside open_conflict
================================================================================
*/word *word*
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (italic_open)
      (word)
      (whitespace)
      (punctuation)
      (word)
      (bold_close))
))

================================================================================
att-25: higher dynamic precedence level to verbatim
================================================================================
`~~word` word `word word
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (punctuation)
      (word)
      (verbatim_close))
    (whitespace)
    (word)
    (whitespace)
    (unclosed_verbatim
      (verbatim_open)
      (word)
      (whitespace)
      (word))))

;; *word /word -word-/
;; */-word
;; `word[word]
;; <failing>
;; `word:*word*
;; *word /word *|word|*

; vim:ts=2:sw=2:
