test/corpus/extensions.txt
================================================================================
ext-00: Attributes in attached modifier
================================================================================
*bold*(color red;font sans-serif)
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close)
      attributes: (attributes
        (attribute
          key: (value)
          value: (value))
        (attribute
          key: (value)
          value: (value))))))

================================================================================
ext-01: failed extension by verbatim close
================================================================================
`*word*(word`
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (punctuation)
      (word)
      (punctuation)
      (punctuation)
      (word)
      ; (punctuation)
      ; (word)
      (verbatim_close))
    ))

================================================================================
ext-02: Attributes in structural detached modifier
================================================================================
* (x;@ A) heading
* ( ;
   @ A;
   > 5th Aug 2024
  ) heading
--------------------------------------------------------------------------------
(document
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute
          key: (value))
        (attribute
          key: (value)
          value: (value)))
      (paragraph
        (word))))
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute)
        (attribute
          key: (value)
          value: (value))
        (attribute
          key: (value)
          value: (value)))
      (paragraph
        (word)))))

================================================================================
ext-03: Attributes in nestable detached modifier
================================================================================
- (x;@ A) list item
- ( ;
   @ A;
   > 5th Aug 2024
  ) list item
--------------------------------------------------------------------------------
(document
  (unordered_list
    (unordered_list_item
      (unordered_list_prefix)
      attributes: (attributes
        (attribute
          key: (value))
        (attribute
          key: (value)
          value: (value)))
      (paragraph
        (word)
        (whitespace)
        (word)
        (soft_break)))
    (unordered_list_item
      (unordered_list_prefix)
      attributes: (attributes
        (attribute)
        (attribute
          key: (value)
          value: (value))
        (attribute
          key: (value)
          value: (value)))
      (paragraph
        (word)
        (whitespace)
        (word)
        ))))

================================================================================
ext-04: Trailing whitespace
================================================================================
* ( ;      
   color red) heading
* (       
   color red) heading
--------------------------------------------------------------------------------
(document
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute)
        (attribute
          key: (value)
          value: (value)))
      (paragraph
        (word))))
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute
          key: (value)
          value: (value)))
      (paragraph
        (word)))))

================================================================================
ext-05: Ignoring whitespaces
================================================================================
* (x ) heading
* ( x) heading
* ( x ) heading
* ( x ;) heading
* (
  x ;
  ) heading
--------------------------------------------------------------------------------
(document
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute
          key: (value)))
      (paragraph
        (word))))
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute
          key: (value)))
      (paragraph
        (word))))
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute
          key: (value)))
      (paragraph
        (word))))
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute
          key: (value)))
      (paragraph
        (word))))
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute
          key: (value))
        (attribute))
      (paragraph
        (word)))))

================================================================================
ext-06: Semicolon after auto-semicolon by newline
================================================================================
* (asdf
; asdf
) word
--------------------------------------------------------------------------------
(document
  (section
    heading: (heading
      (heading_prefix)
      attributes: (attributes
        (attribute
          key: (value))
        (attribute
          key: (value)))
      (paragraph
        (word)))))

; vim:ts=2:sw=2:
