test/corpus/infirm_tags.txt
================================================================================
infirm-00: Basic infirm tag
================================================================================
.infirm param
--------------------------------------------------------------------------------
;; TODO: fix argument token
(document
  (infirm_tag
    name: (identifier)
    (param
      (word))))

================================================================================
infirm-01: Not infirm tag
================================================================================
...
--------------------------------------------------------------------------------
(document
  (paragraph
    (punctuation)
    (punctuation)
    (punctuation)))

; vim:ts=2:sw=2:
