test/corpus/link_modifiers.txt
================================================================================
link-mod-00: TESTS (19 unorganized tests)
================================================================================
word:word

:word

word:

*:word*

*word:*

:*word*

*word*:

word:*

*:word

*:word:*

word*:word

word:*word

word*:word:*word

*word*:word

word:*word*

*word*:word:*word*

word:*word*:word

word :*word*

*word*: word
--------------------------------------------------------------------------------
(document
  (paragraph
    (word)
    (punctuation)
    (word)
    (soft_break))
  (paragraph
    (punctuation)
    (word)
    (soft_break))
  (paragraph
    (word)
    (punctuation)
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (punctuation)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (punctuation)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (word)
    (punctuation)
    (punctuation)
    (soft_break))
  (paragraph
    (unclosed_bold
      (bold_open)
      (punctuation)
      (word)
      (soft_break)))
  (paragraph
    (bold
      (bold_open)
      (punctuation)
      (word)
      (punctuation)
      (bold_close))
    (soft_break))
  (paragraph
    (word)
    (punctuation)
    (punctuation)
    (word)
    (soft_break))
  (paragraph
    (word)
    (unclosed_bold
      (bold_open)
      (word)
      (soft_break)))
  (paragraph
    (word)
    (punctuation)
    (punctuation)
    (word)
    (unclosed_bold
      (bold_open)
      (word)
      (soft_break)))
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (word)
    (soft_break))
  (paragraph
    (word)
    (bold
      (bold_open)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (word)
    (bold
      (bold_open)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (word)
    (bold
      (bold_open)
      (word)
      (bold_close))
    (word)
    (soft_break))
  (paragraph
    (word)
    (whitespace)
    (bold
      (bold_open)
      (word)
      (bold_close))
    (soft_break))
  (paragraph
    (bold
      (bold_open)
      (word)
      (bold_close))
    (whitespace)
    (word)))
