test/corpus/linkables_anchor.txt
================================================================================
anchor-00: Standalone anchor
================================================================================
[word]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      markup: (markup
        (word)))))

================================================================================
anchor-01: Markup inside anchor description
================================================================================
[*word /word/*]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      markup: (markup
        (bold
          (bold_open)
          (word)
          (whitespace)
          (italic
            (italic_open)
            (word)
            (italic_close))
          (bold_close))))))

================================================================================
anchor-02: Verbatim > anchor
================================================================================
`[word]`

[`word]`]
--------------------------------------------------------------------------------
(document
  (paragraph
    (verbatim
      (verbatim_open)
      (punctuation)
      (word)
      (punctuation)
      (verbatim_close))
    (soft_break))
  (paragraph
    (anchor
      markup: (markup
        (verbatim
          (verbatim_open)
          (word)
          (punctuation)
          (verbatim_close))))))

================================================================================
anchor-03: free-form verbatim > anchor
================================================================================
[`|word]|`]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      markup: (markup
        (verbatim
          (verbatim_open)
          (punctuation)
          (word)
          (punctuation)
          (punctuation)
          (verbatim_close))))))

================================================================================
anchor-04: reset attached modifier after destination
================================================================================
[*word] *word*
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_anchor
      markup: (markup
        (bold
          (bold_open)
          (word)
          (punctuation)
          (whitespace)
          (punctuation)
          (word)
          (bold_close))))))

================================================================================
anchor-05: anchor after unclosed verbatim
================================================================================
`[word]
--------------------------------------------------------------------------------
(document
  (paragraph
    (unclosed_verbatim
      (verbatim_open)
      (punctuation)
      (word)
      (punctuation))))

================================================================================
anchor-06: non-verbatim precedence
================================================================================
[mention *Array ]*]

[mention *|Array ]|*]
--------------------------------------------------------------------------------
; NOTE: *Array []* is just error
(document
  (paragraph
    (anchor
      markup: (markup
        (word)
        (whitespace)
        (bold
          (bold_open)
          (word)
          (whitespace)
          (punctuation)
          (bold_close))))
    (soft_break))
  (paragraph
    (anchor
      markup: (markup
        (word)
        (whitespace)
        (bold
          (bold_open)
          (punctuation)
          (word)
          (whitespace)
          (punctuation)
          (punctuation)
          (bold_close))))))

================================================================================
anchor-07: verbatim precedence
================================================================================
[mention `Array []`]

[mention `|Array []|`]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      markup: (markup
        (word)
        (whitespace)
        (verbatim
          (verbatim_open)
          (word)
          (whitespace)
          (punctuation)
          (punctuation)
          (verbatim_close))))
    (soft_break))
  (paragraph
    (anchor
      markup: (markup
        (word)
        (whitespace)
        (verbatim
          (verbatim_open)
          (punctuation)
          (word)
          (whitespace)
          (punctuation)
          (punctuation)
          (punctuation)
          (verbatim_close))))))

================================================================================
anchor-08: closing modifier without opening modifier (1)
================================================================================
*word]*
--------------------------------------------------------------------------------
(document
  (paragraph
    (bold
      (bold_open)
      (word)
      (punctuation)
      (bold_close))))

================================================================================
anchor-09: closing modifier without opening modifier (2)
================================================================================
[mention `]`]
--------------------------------------------------------------------------------
(document
  (paragraph
    (anchor
      markup: (markup
        (word)
        (whitespace)
        (verbatim
          (verbatim_open)
          (punctuation)
          (verbatim_close))))))

; vim:ts=2:sw=2:
