test/corpus/nestable_detached_modifiers.txt
================================================================================
list-00: hard test
================================================================================
- asdf
/ asdf
- asdf
-- asdf
-- asdf
~~ asdf
~~ asdf
/ asdf
- asdf

-- adsf
-- adsf

- adsf
--------------------------------------------------------------------------------
(document
  (unordered_list
    (unordered_list_item
      (unordered_list_prefix)
      (paragraph
        (word)
        (soft_break))
      (null_list_prefix)
      (paragraph
        (word)
        (soft_break)))
    (unordered_list_item
      (unordered_list_prefix)
      (paragraph
        (word)
        (soft_break))
      (unordered_list
        (unordered_list_item
          (unordered_list_prefix)
          (paragraph
            (word)
            (soft_break)))
        (unordered_list_item
          (unordered_list_prefix)
          (paragraph
            (word)
            (soft_break))))
      (ordered_list
        (ordered_list_item
          (ordered_list_prefix)
          (paragraph
            (word)
            (soft_break)))
        (ordered_list_item
          (ordered_list_prefix)
          (paragraph
            (word)
            (soft_break))))
      (null_list_prefix)
      (paragraph
        (word)
        (soft_break)))
    (unordered_list_item
      (unordered_list_prefix)
      (paragraph
        (word)
        (soft_break))))
  (unordered_list
    (unordered_list_item
      (unordered_list_prefix)
      (paragraph
        (word)
        (soft_break)))
    (unordered_list_item
      (unordered_list_prefix)
      (paragraph
        (word)
        (soft_break))))
  (unordered_list
    (unordered_list_item
      (unordered_list_prefix)
      (paragraph
        (word)))))

; TODO: add more tests

; vim:ts=2:sw=2:
